--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,13 @@ release/
 build/
 .DS_Store
 *.iml
-*.classhpath
+*.classpath
 *.project
+
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
